code25_all/python/1161810.txt
Tue Jul 21{stevenhirsch@steven-hirschs-macbook-pro-2}/projects/python:-->./apache_logs.py 
  File "./apache_logs.py", line 17
    print __doc__
                ^
SyntaxError: invalid syntax



#!/usr/local/bin/python
"""

USAGE:

    apache_logs.py 

"""

import sys
import os


if __name__ == "__main__":
    if not len(sys.argv) > 1:
        print __doc__
        sys.exit(1)
    infile_name = sys.argv[1]

